[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["Theodros Zelleke <theodros.zelleke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
streamlit = "^1.12.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
